# Journal

./: .env.example  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
records/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
records/migrations/: 0001_initial.py  0002_alter_entry_start_time_alter_objective_time.py  0003_entry_user_alter_entry_start_time_and_more.py
records/templates/: base.html
records/templates/records/: entry_confirm_delete.html  entry_detail.html  entry_form.html  entry_list.html  objective_form.html
records/templates/records/includes/: inc_menu.html
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  user_form.html
